Bug #35654: * adjust styling for moduel items overview page, add context menu * remove margin for first TitlePane * adjust general font styling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54115 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
@@ -23,7 +23,7 @@
 .umc .dijitTitlePane {
 	margin-top: 3em;
 }
-.umc .dijitTitlePane:firstChild {
+.umc .dijitTitlePane:first-child {
 	margin-top: 0;
 }
 
