--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -31,24 +31,25 @@ body.umcOverviewNotShown {
 
 /* Headings */
 .claro h1 {
-	font-size: 1.545em; 
+	font-size: $font-size-medium;
+	font-weight: bold
 	margin-bottom:0.727em;
 }
 .claro h2 { 
-	font-size: 1.364em; 
-	line-height: 1.455em; 
+	font-size: $font-size-medium;
+	//line-height: 1.455em; 
 	margin-top:1em; 
 	margin-bottom:0.60em;
 	font-weight: normal;
 }
 .claro h3, .claro h4, .claro h5, .claro h6 {
-	font-size:1.091em; 
-	font-weight: normal; 
+	font-size:1em; 
+	font-weight: bold; 
 }
 
 /* paragraphs, quotes and lists */
 .claro p { 
-	line-height: 1.3em;
+	//line-height: 1.3em;
 }
 
 /* pre and code */
