--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -25,7 +25,7 @@ $lg-min = 1200px
 
 $container-background-color ?= #fff;										// Backgrounds for various content areas such as TitlePane, ContentPane and Inputs (if changed, adjust selected tab to match)
 
-$minor-selected-color ?= spin(saturate(darken($primary-color, 6), 19), 0);						// Color for various arrows and buttons
+$minor-selected-color ?= #c8c8c8;						// Color for various arrows and buttons
 $base-border-color ?= #b4b4b4;		// Augmented and used directly by variables to create border colors for various widgets
 $unfocused-clickable-color ?= spin(saturate(lighten($primary-color, 5), 10), 0);				// Background color for enabled buttons, text inputs
 $border-color ?= spin(desaturate(darken($primary-color, 15), 67), 8);						// Border color for (enabled, unhovered) TextBox, Slider, Accordion, BorderContainer, TabContainer
