* Bug #35654: fix GalleryPane styling + minor CSS adjustments
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54127 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/layout/TabContainer.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/layout/TabContainer.styl
@@ -165,7 +165,7 @@ topBottom-selected-tab-gradient($direction) {
 	font-weight: normal;
 
 	// gradient (CSS gradient, with backup image for IE6-9)
-	background-image: url("images/tabTopUnselected.png");
+	//background-image: url("images/tabTopUnselected.png");
 	background-repeat: repeat-x;
 	unselected-tab-gradient(top);
 
