--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site.css
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site.css
@@ -1,3 +1,4 @@
+@import url("site/widgets.css");
 @import url("site/gallerypane.css");
 @import url("site/header.css");
 @import url("site/inputsizes.css");
