--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -54,3 +54,12 @@
 		min-height: 250px;
 	}
 }
+
+.umc .umcPageHelpText {
+	margin-bottom: 1.5em;
+
+}
+.umc .umcPageHeader h1 {
+	margin-top: 0;
+}
+
