--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -24,15 +24,19 @@
 	-webkit-user-select:none;
 
 	.umcGalleryCategoryHeader {
-		display: block;
-		padding-bottom: 0.416em;
-		margin-bottom: 5px;
-		font-size: 1.166em;
-		clear: left;
+		padding: 0 0 0.25em 0;
+		margin: 1em 5px 0.5em 5px;
+		font-size: $font-size-medium;
+		font-weight: bold;
+		border-bottom: solid 1px $base-border-color;
 		// on the android tablet the border would only be displayed at width ~300px
 		// this background image hack fixes the problem, see:
 		//   http://stackoverflow.com/a/13550951
 		background-image: url(../images/blank.png);
+	}
+
+	.umcGalleryCategoryHeader:first-child {
+		margin-top: 0;
 	}
 
 	.umcGalleryWrapperItem {
@@ -72,13 +76,19 @@
 		}
 
 		.umcGalleryIcon {
-			margin: 0;
+			margin: 5px 0 0 5px;
 			padding-bottom: 0;
 //			position: absolute;
 //			visibility: hidden;
 //			display: none;
 			height: 70px;
 			float: left;
+		}
+
+		/* if an icon is present, set a margin to the text elements */
+		.umcGalleryIcon + .umcGalleryName,
+		.umcGalleryIcon + .umcGalleryName + .umcGalleryDescription {
+			margin-left: 65px;
 		}
 
 		.umcGalleryStatusIcon {
