* Bug #35654: add styling for UMC headless mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54154 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -29,6 +29,22 @@ body.umcOverviewShown {
 body.umcOverviewNotShown {
 }
 
+body.umcHeadless {
+
+	#umcHeader,
+	#umcHeader .umcHeaderLeft {
+		height: 42px;
+	}
+	.umcModuleHeader {
+		height: 2px!important;
+		min-height: 2px!important;
+		padding-top: 0!important;
+	}
+	.umcModuleHeader > div {
+		display: none;
+	}
+}
+
 /* Headings */
 .claro h1 {
 	font-size: $font-size-medium;
