--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
@@ -70,7 +70,7 @@
 }
 .claro .dijitTitlePane, .claro .dijitFieldset {
 	.dijitTitlePaneTitleHover .dijitArrowNode {
-		background-position-x: -20px;
+		background-position: -20px 0;
 		opacity: 0.66;
 	}
 	.dijitTitlePaneTitleActive .dijitArrowNode {
@@ -80,10 +80,10 @@
 
 .claro .dijitTitlePane {
 	.dijitTitlePaneTitleClosed .dijitArrowNode {
-		background-position-x: -160px;
+		background-position: -160px 0;
 	}
 	.dijitTitlePaneTitleClosed.dijitTitlePaneTitleHover .dijitArrowNode {
-		background-position-x: -180px;
+		background-position: -180px 0;
 	}
 }
 
