--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -119,7 +119,7 @@
 	color:$text-color;
 	transition-duration: .2s;
 	.dijitArrowButtonInner {
-		background-position-x: -20px;
+		background-position: -20px 0;
 		opacity: 0.66;
 	}
 }
@@ -134,7 +134,7 @@
 	box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2);
 	transition-duration: .1s;
 	.dijitArrowButtonInner {
-		background-position-x: -20px;
+		background-position: -20px 0;
 		opacity: 1;
 	}
 }
