--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -135,13 +135,13 @@
 			display: none;
 		}
 		.umcGalleryContextIcon {
-			background-position-x: -40px;
+			background-position: -40px -40px;
 		}
 		.umcGalleryContextIcon:hover {
-			background-position-x: -60px;
+			background-position: -60px -40px;
 		}
 		.umcGalleryContextIcon:active {
-			background-position-x: -60px;
+			background-position: -60px -40px;
 			opacity: 0.67;
 		}
 	}
