--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -143,14 +143,14 @@ color: $text-color;
 	}
 }
 
-.dj_ie8 .umc .umcHeader,
-.has-mozilla .umc .umcHeader {
-	.umcHeaderRight {
-		.umcHeaderText {
-			padding: 10px 0 5px 0;
-		}
-	}
-}
+//.dj_ie8 .umc .umcHeader,
+//.has-mozilla .umc .umcHeader {
+//	.umcHeaderRight {
+//		.umcHeaderText {
+//			padding: 10px 0 5px 0;
+//		}
+//	}
+//}
 
 /* special stylings depending on device class */
 
