--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
@@ -82,10 +82,10 @@
 	margin-top: 3px;
 }
 #umcLoginDialog .umcLoginForm input[type=submit]:hover {
-	background-position-x: -20px;
+	background-position: -20px -120px;
 }
 #umcLoginDialog .umcLoginForm input[type=submit]:active {
-	background-position-x: -40px;
+	background-position: -40px -120px;
 }
 
 #umcLoginDialog .umcLoginForm label:nth-last-child(1) input {
@@ -138,11 +138,11 @@
 	}
 }
 #umcLanguageSwitch .dijitHover .dijitArrowButtonInner {
-	background-position-x: -20px;
+	background-position: -20px -180px;
 	opacity: 0.66;
 }
 #umcLanguageSwitch .dijitActive .dijitArrowButtonInner {
-	background-position-x: -20px;
+	background-position: -20px -180px;
 	opacity: 1;
 }
 
