* Bug #35654: display label of module header buttons on hover
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54253 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -27,12 +27,23 @@
 
 			.dijitButtonText {
 				display: none;
+				position: absolute;
+				color: #ffffff;
+				width: 300px;
+				padding-right: 0;
+				//margin-left: -140px;
+				margin-left: -280px;
+				text-align: right;
 			}
 			.dijitIcon {
 				display: block;
+				width: 20px;
 				margin: auto;
 			}
 		}
+	}
+	.dijitButton.dijitButtonHover .dijitButtonText {
+		display: inherit;
 	}
 }
 
