* Bug #35654: Add border around TextArea
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54254 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
@@ -91,6 +91,10 @@
  	transition-duration: .35s;
 	//width: 100%;
 }
+.claro .dijitTextArea {
+	border-width: thin;
+	border-style: solid;
+}
 
 .claro .dijitSelect,
 .claro .dijitTextBox {
