* Bug #35654: define background via CSS and a tile image
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54290 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -20,7 +20,24 @@ html {
 }
 
 body.claro {
-	background: #eeeeef url(images/background.jpg) no-repeat center 0;
+	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)") ;
+}
+
+.dj_ie9 body.claro,
+.dj_ie8 body.claro {
+	/* fallback on horizontal gradient for IE8/9 */
+	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#cccccc',GradientType=1)");
+	background: #cdcdcd;
+}
+
+.dj_ie9 body.claro:before,
+.dj_ie8 body.claro:before {
+	/* add the repeating background for IE9 additionally */
+	content: "";
+	background: url(images/background-tile.png) repeat;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 body.umcOverviewShown {
