* Bug #35654: IE9 fixes for header buttons and background pattern
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54292 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -37,16 +37,18 @@ body.claro {
 	background: url(images/background-tile.png) repeat;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 210px;
 }
 
-body.umcOverviewShown {
+.dj_ie9 body.claro.umcOverviewShown:before,
+.dj_ie8 body.claro.umcOverviewShown:before,
+body.claro.umcOverviewShown {
 	min-height: 100%;
 }
-body.umcOverviewNotShown {
+body.claro.umcOverviewNotShown {
 }
 
-body.umcHeadless {
+body.claro.umcHeadless {
 
 	#umcHeader,
 	#umcHeader .umcHeaderLeft {
