--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -30,6 +30,7 @@
 			display: block;
 			float: left;
 			background: none;
+			filter: none;
 			box-shadow: none;
 			padding: 9px 0 5px 0;
 			margin: 0;
@@ -59,6 +60,7 @@
 			padding: 0 0 5px 0;
 			border: none;
 			background: none;
+			filter: none;
 
 			.dijitButtonNode {
 				padding: 0 4px;
@@ -73,6 +75,7 @@
 	.dijitButtonNode {
 		height: auto !important;
 		background: none;
+		filter: none;
 		border-radius: 0;
 		border: none;
 		padding: 0;
@@ -112,8 +115,9 @@
 	#umcMenuHost .dijitButtonText {
 		display: inline-block;
 		background: none;
-					box-shadow: none;
-color: $text-color;
+		filter: none;
+		box-shadow: none;
+		color: $text-color;
 	}
 
 	.dijitDisabled #umcMenuHost .dijitArrowButtonInner {
