--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
@@ -132,6 +132,7 @@
 		border: 0 none;
 		box-shadow: none;
 		background: none;
+		filter: none;
 		.dijitArrowButtonInner {
 			icon-image(0, -180, "../", 20px, 25px);
 		}
