--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -20,6 +20,7 @@
 		padding-top: 0.9em;
 		.dijitButtonNode {
 			background: none;
+			filter: none;
 			border-radius: 0;
 			border: none;
 			padding: 0;
