--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/overview.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/overview.styl
@@ -21,6 +21,7 @@
 		padding: 0;
 		border: 0 none;
 		background: none;
+		filter: none;
 		box-shadow: none;
 		display: block;
 	}
@@ -57,6 +58,7 @@
 	.dijitButton {
 		font-size: 100%;
 		background: none;
+		filter: none;
 		border: none;
 		display: block;
 		margin: 0.4em 0 0 0;
@@ -86,6 +88,7 @@
 		.dijitButtonNode {
 			text-shadow: none;
 			background: none;
+			filter: none;
 		}
 	}
 }
