* Bug #35654: split icons into different files according to size black/white
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54316 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -81,25 +81,25 @@
 	icon-image(0, 0, "../");
 }
 .claro .dijitLeftArrowButton .dijitArrowButtonInner {
-	background-position: -77px 53%;
+	background-position: -80px 0;
 }
 .claro .dijitRightArrowButton .dijitArrowButtonInner {
-	background-position: -26px 53%;
+	background-position: -120px 0;
 }
 .claro .dijitUpArrowButton .dijitArrowButtonInner {
-	background-position: 0 53%;
+	background-position: -40px 0;
 }
 .claro .dijitDisabled .dijitArrowButtonInner {
-	background-position: -151px 53%;
+	background-position: 0 -160px;
 }
 .claro .dijitDisabled .dijitLeftArrowButton .dijitArrowButtonInner {
-	background-position: -177px 53%;
+	background-position: -240px 0;
 }
 .claro .dijitDisabled .dijitRightArrowButton .dijitArrowButtonInner {
-	background-position: -126px 53%;
+	background-position: -280px 0;
 }
 .claro .dijitDisabled .dijitUpArrowButton .dijitArrowButtonInner {
-	background-position: -100px 53%;
+	background-position: -160px 0;
 }
 
 .claro .dijitButtonText {
