--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -135,13 +135,13 @@
 			display: none;
 		}
 		.umcGalleryContextIcon {
-			background-position: -40px -40px;
+			icon-image(0, -40, "../", "-white");
 		}
 		.umcGalleryContextIcon:hover {
-			background-position: -60px -40px;
+			background-position: -20px -40px;
 		}
 		.umcGalleryContextIcon:active {
-			background-position: -60px -40px;
+			background-position: -20px -40px;
 			opacity: 0.67;
 		}
 	}
