--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
@@ -76,16 +76,16 @@
 	height: 100%;
 }
 #umcLoginDialog .umcLoginForm input[type=submit] {
-	icon-image(0, -120, "../", 20px, 20px);
+	icon-image(0, -160, "../");
 	float: left;
 	color: transparent;
 	margin-top: 3px;
 }
 #umcLoginDialog .umcLoginForm input[type=submit]:hover {
-	background-position: -20px -120px;
+	background-position: -20px -160px;
 }
 #umcLoginDialog .umcLoginForm input[type=submit]:active {
-	background-position: -40px -120px;
+	icon-image(0, -160, "../", "-white");
 }
 
 #umcLoginDialog .umcLoginForm label:nth-last-child(1) input {
@@ -134,16 +134,16 @@
 		background: none;
 		filter: none;
 		.dijitArrowButtonInner {
-			icon-image(0, -180, "../", 20px, 25px);
+			icon-image(0, -220, "../", "", 20px, 25px);
 		}
 	}
 }
 #umcLanguageSwitch .dijitHover .dijitArrowButtonInner {
-	background-position: -20px -180px;
+	background-position: -20px -220px;
 	opacity: 0.66;
 }
 #umcLanguageSwitch .dijitActive .dijitArrowButtonInner {
-	background-position: -20px -180px;
+	background-position: -20px -220px;
 	opacity: 1;
 }
 
