--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
@@ -3,46 +3,50 @@
 // helper function to generate rules for hover and active states
 icon-rule($iconName, $xoffset, $yoffset, $height=20px, $width=20px) {
 	for $suffix in "" White {
-		$xoffsetColor = 0
+		$iconImageSuffix=""
 		$opacityHover = 0.66
 		$opacityActive = 1
 		if ($suffix == "White") {
-			$xoffsetColor = -40
+			$iconImageSuffix += "-white"
 			$opacityHover = 1
 			$opacityActive = 0.66
 		}
 		.umc{$iconName}Icon{$suffix} {
-			icon-image($xoffset + $xoffsetColor, $yoffset, "", $width, $height);
+			icon-image($xoffset, $yoffset, "", $iconImageSuffix, $width, $height);
 		}
 		.dijitHover .umc{$iconName}Icon{$suffix} {
-			background-position: ($xoffset - 20px + $xoffsetColor) unit($yoffset, px);
+			background-position: ($xoffset - 20px) unit($yoffset, px);
 			opacity: $opacityHover;
 		}
 		.dijitActive .umc{$iconName}Icon{$suffix} {
-			background-position: ($xoffset - 20px + $xoffsetColor) unit($yoffset, px);
+			background-position: ($xoffset - 20px) unit($yoffset, px);
 			opacity: $opacityActive;
 		}
 	}
 }
 
 icon-rule("Down", 0, 0);
-icon-rule("Up", -80, 0);
-icon-rule("Left", -160, 0);
-icon-rule("Right", -240, 0);
+icon-rule("Up", -40, 0);
+icon-rule("Left", -80, 0);
+icon-rule("Right", -120, 0);
 
 icon-rule("ArrowDown", 0, -20);
-icon-rule("ArrowUp", -80, -20);
-icon-rule("ArrowLeft", -160, -20);
-icon-rule("ArrowRight", -240, -20);
+icon-rule("ArrowUp", -40, -20);
+icon-rule("ArrowLeft", -80, -20);
+icon-rule("ArrowRight", -120, -20);
 
 icon-rule("ContextMenu", 0, -40);
 icon-rule("Close", 0, -60);
-icon-rule("SmallClose", -80, -60);
 icon-rule("Minimize", 0, -80);
 icon-rule("Empty", 0, -100);
-icon-rule("Checked", -80, -100);
-icon-rule("LargeRight", 0, -120);
-icon-rule("LargeClose", 0, -140);
-icon-rule("Save", 0, -160);
-icon-rule("Lang", 0, -180, 25px);
+icon-rule("EmptyDisabled", 40, -100);
+icon-rule("Checked", 0, -120);
+icon-rule("CheckedDisabled", 40, -120);
+icon-rule("Selected", 0, -140);
+icon-rule("SelectedDisabled", 40, -140);
+icon-rule("LargeRight", 0, -160);
+icon-rule("LargeClose", 0, -180);
+icon-rule("Save", 0, -200);
+icon-rule("Help", -40, -200);
+icon-rule("Lang", 0, -220, 25px);
 
