* Bug #35654: add styles for RadioButtons + CheckBoxes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54319 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
@@ -47,6 +47,10 @@
 	.dojoxGridCellOver {
 		border: none;
 	}
+	.dijitCheckBox {
+		$_iconImage = replace("^(.*)(\.\w*)$", "$1-small-white$2", $image-icons)
+		background-image: url($_iconImage);
+	}
 }
 .umc .dojoxGrid {
 	font-family: inherit;
