--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Checkbox.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Checkbox.styl
@@ -22,58 +22,62 @@
 @import "../variables";
 
 .claro .dijitToggleButton .dijitCheckBoxIcon {
-	background-image: url("../" + $image-checkmark);
+	//background-image: url("../" + $image-checkmark);
+	icon-image(0, -36, "../", "-small", 12px, 12px);
 }
 
 .dj_ie6 .claro .dijitToggleButton .dijitCheckBoxIcon {
-	background-image: url("../" + $image-checkmark-ie6);
+	//background-image: url("../" + $image-checkmark-ie6);
 }
 
 .claro .dijitCheckBox,
 .claro .dijitCheckBoxIcon		/* inside a toggle button */	{
-	background-image: url("../" + $image-form-checkbox-and-radios); /* checkbox sprite image */
-	background-repeat: no-repeat;
-	width: 15px;
-	height: 16px;
-	margin: 0 2px 0 0;
+	//background-image: url("../" + $image-form-checkbox-and-radios); /* checkbox sprite image */
+	//background-repeat: no-repeat;
+	//width: 15px;
+	//height: 16px;
+	icon-image(0, -36, "../", "-small", 12px, 12px);
+	margin: -3px 1px 0 0;
 	padding: 0;
 }
 
 .dj_ie6 .claro .dijitCheckBox,
 .dj_ie6 .claro .dijitCheckBoxIcon		/* inside a toggle button */	{
-	background-image: url("../" + $image-form-checkbox-and-radios-ie6); /* checkbox sprite image */
+	//background-image: url("../" + $image-form-checkbox-and-radios-ie6); /* checkbox sprite image */
 }
 
 .claro .dijitCheckBox,
 .claro .dijitToggleButton .dijitCheckBoxIcon {
 	/* unchecked */
-	background-position: -15px;
+	background-position: 0 -36px;
 }
 
 .claro .dijitCheckBoxChecked,
 .claro .dijitToggleButtonChecked .dijitCheckBoxIcon {
 	/* checked */
-	background-position: -0;
+	background-position: 0 -48px;
 }
 
 .claro .dijitCheckBoxDisabled {
 	/* disabled */
-	background-position: -75px;
+	background-position: -24px -36px;
 }
 
 .claro .dijitCheckBoxCheckedDisabled {
 	/* disabled but checked */
-	background-position: -60px;
+	background-position: -24px -48px;
 }
 
 .claro .dijitCheckBoxHover {
 	/* hovering over an unchecked enabled checkbox */
-	background-position: -45px;
+	background-position: -12px -36px;
+	opacity: 0.66;
 }
 
 .claro .dijitCheckBoxCheckedHover {
 	/* hovering over an checked enabled checkbox */
-	background-position: -30px;
+	background-position: -12px -48px;
+	opacity: 0.66;
 }
 
 
