--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/RadioButton.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/RadioButton.styl
@@ -23,62 +23,66 @@
 
 .claro .dijitToggleButton .dijitRadio,
 .claro .dijitToggleButton .dijitRadioIcon {
-	background-image: url("../" + $image-form-checkbox-and-radios);
+	//background-image: url("../" + $image-form-checkbox-and-radios);
+	icon-image(0, -36, "../", "-small", 12px, 12px);
 }
 
 .dj_ie6 .claro .dijitToggleButton .dijitRadio,
 .dj_ie6 .claro .dijitToggleButton .dijitRadioIcon {
-	background-image: url("../" + $image-form-checkbox-and-radios-ie6);
+	//background-image: url("../" + $image-form-checkbox-and-radios-ie6);
 }
 
 .claro .dijitRadio,
 .claro .dijitRadioIcon	{		/* inside a toggle button */
-	background-image: url("../" + $image-form-checkbox-and-radios); /* checkbox sprite image */
-	background-repeat: no-repeat;
-	width: 15px;
-	height: 15px;
-	margin: 0 2px 0 0;
+	//background-image: url("../" + $image-form-checkbox-and-radios); /* checkbox sprite image */
+	//background-repeat: no-repeat;
+	//width: 15px;
+	//height: 15px;
+	icon-image(0, -36, "../", "-small", 12px, 12px);
+	margin: -1px 2px 0 0;
 	padding: 0;
 }
 
 .dj_ie6 .claro .dijitRadio,
 .dj_ie6 .claro .dijitRadioIcon	{		/* inside a toggle button */
-	background-image: url("../" + $image-form-checkbox-and-radios-ie6); /* checkbox sprite image */
+	//background-image: url("../" + $image-form-checkbox-and-radios-ie6); /* checkbox sprite image */
 }
 
 .claro .dijitRadio{
 	/* unselected */
-	background-position: -105px;
+	background-position: 0 -36px;
 }
 
 .claro .dijitToggleButton .dijitRadioIcon {
 	/* unselected */
-	background-position: -107px;
+	background-position: 0 -36px;
 }
 
 .claro .dijitRadioDisabled {
 	/* unselected and disabled */
-	background-position: -165px;
+	background-position: -24px -36px;
 }
 
 .claro .dijitRadioHover {
 	/* hovering over an unselected enabled radio button */
-	background-position: -135px;
+	background-position: -12px -36px;
+	opacity: 0.66;
 }
 
 .claro .dijitRadioChecked{
-	background-position: -90px;
+	background-position: 0 -60px;
 }
 
 .claro .dijitToggleButtonChecked .dijitRadioIcon {
-	background-position: -92px;
+	background-position: 0 -60px;
 }
 
 .claro .dijitRadioCheckedHover{
-	background-position: -120px;
+	background-position: -12px -60px;
+	opacity: 0.66;
 }
 
 .claro .dijitRadioCheckedDisabled {
 	/* selected but disabled */
-	background-position: -150px;
+	background-position: -24px -60px;
 }
