* Bug #35654: adjust background gradient, fix RadioButton/CheckBox margins
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54335 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -20,7 +20,12 @@ html {
 }
 
 body.claro {
-	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)") ;
+	/* Chrome,Safari4+ */
+	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%,#cdcdcd), color-stop(50%,#efefef), color-stop(100%,#cccccc));
+	/* Chrome10+,Safari5.1+ */
+	background: url(images/background-tile.png) repeat, -webkit-linear-gradient(to right top, #cdcdcd 0%,#efefef 50%,#cccccc 100%);
+	/* W3C */
+	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)");
 }
 
 .dj_ie9 body.claro,
