--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -19,6 +19,7 @@ html {
 	background: white;
 }
 
+body.claro .umcBackground,
 body.claro {
 	/* Chrome,Safari4+ */
 	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%,#cdcdcd), color-stop(50%,#efefef), color-stop(100%,#cccccc));
@@ -28,6 +29,8 @@ body.claro {
 	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)");
 }
 
+.dj_ie9 body.claro .umcBackground,
+.dj_ie8 body.claro .umcBackground,
 .dj_ie9 body.claro,
 .dj_ie8 body.claro {
 	/* fallback on horizontal gradient for IE8/9 */
@@ -35,6 +38,8 @@ body.claro {
 	background: #cdcdcd;
 }
 
+.dj_ie9 body.claro:before .umcBackground,
+.dj_ie8 body.claro:before .umcBackground,
 .dj_ie9 body.claro:before,
 .dj_ie8 body.claro:before {
 	/* add the repeating background for IE9 additionally */
