* Bug #35654: adjust size of module search in relation to drop down menus
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54393 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -25,6 +25,13 @@
 	}
 
 	.umcHeaderRight {
+		.umcHeaderRightTop {
+			display: inline-block;
+			float: right;
+		}
+		.umcHeaderRightTop > * {
+			width: 100%;
+		}
 		/* style for user and host information */
 		.umcHeaderText {
 			display: block;
@@ -61,10 +68,6 @@
 			border: none;
 			background: none;
 			filter: none;
-
-			.dijitButtonNode {
-				padding: 0 4px;
-			}
 		}
 	}
 
@@ -82,8 +85,9 @@
 		box-shadow: none;
 	}
 
-	span[widgetid=umcMenuUsername].dijitDropDownButton,
-	span[widgetid=umcMenuHost].dijitDropDownButton {
+	.umcHeaderRightTop {//,
+	//span[widgetid=umcMenuUsername].dijitDropDownButton,
+	//span[widgetid=umcMenuHost].dijitDropDownButton {
 		/* alignment with other elements */
 		margin-right: -10px;
 		//margin-bottom: 0.5em;
@@ -103,6 +107,9 @@
 			.umcInlineLabel {
 				color: $text-color;
 			}
+		}
+		.umcLiveSearchSidebarRadioButtonGroup {
+			display: none;
 		}
 	}
 
