* Bug #35654: don't display icons of UCS compontents * remove right margin of gallerypane as there are no context menus
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54446 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/umc/js/appcenter.css
+++ b/management/univention-management-console-module-appcenter/umc/js/appcenter.css
@@ -30,3 +30,7 @@
 .umcAppCenterGallery .umcGalleryItem {
 	background-color: #eaeaea;
 }
+.umcAppCenterGallery .umcGalleryItem .umcGalleryName {
+	/* there is no context menu icon */
+	margin-right: 0;
+}
