--- a/services/univention-apache/css/stickyfooter.styl
+++ b/services/univention-apache/css/stickyfooter.styl
@@ -3,25 +3,29 @@
 
 html,
 body {
-  height: 100%;
+  //height: 100%;
+  margin: 0;
+  padding: 0;
   /* The html and body elements cannot have any padding or margin. */
 }
 
 /* Wrapper for page content to push down footer */
-#wrap {
+#wrapper {
   min-height: 100%;
-  height: auto !important;
-  height: 100%;
+ // height: auto !important;
+  height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -166px;
+  //margin: 0 auto -100px;
   /* Pad bottom by footer height */
-  padding: 0 0 166px;
+  //padding: 0 0 166px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 60px;
-  background-color: #f5f5f5;
+  height: 100px;
+  background-color: red; //#f5f5f5;
+  margin-top: -100px;
+  clear: both;
 }
 
 
@@ -29,11 +33,11 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-.container {
+.foocontainer {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
 }
-.container .credit {
+.foocontainer .credit {
   margin: 20px 0;
 }
