--- a/services/univention-apache/css/document.styl
+++ b/services/univention-apache/css/document.styl
@@ -8,7 +8,7 @@ body {
 	font-family: Clear Sans, Arial, Helvetica, sans-serif;
 	font-size: .75em;
 	color: $document-text-color;
-	min-height: 100%;
+	height: 100%;
 	/* Chrome,Safari4+ */
 	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%,#cdcdcd), color-stop(50%,#efefef), color-stop(100%,#cccccc));
 	/* Chrome10+,Safari5.1+ */
@@ -92,6 +92,3 @@ h3, h4, h5, h6 {
 	}
 }
 
-#footer li {
-	display: inline;
-}
