--- a/services/univention-apache/css/stickyfooter.styl
+++ b/services/univention-apache/css/stickyfooter.styl
@@ -1,43 +1,24 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 
-html,
-body {
-  //height: 100%;
-  margin: 0;
-  padding: 0;
-  /* The html and body elements cannot have any padding or margin. */
-}
-
 /* Wrapper for page content to push down footer */
 #wrapper {
-  min-height: 100%;
- // height: auto !important;
-  height: auto;
-  /* Negative indent footer by its height */
-  //margin: 0 auto -100px;
-  /* Pad bottom by footer height */
-  //padding: 0 0 166px;
+	min-height: 100%;
 }
 
-/* Set the fixed height of the footer here */
+/* Site footer with content */
 #footer {
-  height: 100px;
-  background-color: red; //#f5f5f5;
-  margin-top: -100px;
-  clear: both;
+	height: 50px;
+	margin-top: -50px;
+	clear: both;
+
+	li {
+		display: inline;
+		padding-right: 1em;
+	}
+
+	ul {
+		padding-left: 2em;
+	}
 }
 
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-.foocontainer {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
-}
-.foocontainer .credit {
-  margin: 20px 0;
-}
