* Bug #35654: move some CSS from frontend into theme
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54538 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -9,11 +9,29 @@
 		margin: auto;
 	}
 
+	.umcModuleHeaderOuterContainer {
+		background: inherit;
+		width: 100%;
+	}
+
+	.umcModuleHeaderLeft {
+		float: left;
+		padding-bottom: 20px;
+		max-width: 80%;
+	}
+
+	.umcModuleHeaderRight {
+		float: right;
+	}
+
 	.umcModuleHeaderSticky {
 		position: fixed;
 		top: 0;
 		font-size: 0.7em;
 		z-index: 900;
+		.umcModuleHeaderLeft {
+			padding-bottom: 0;
+		}
 	}
 
 	.dijitButton {
